Added h2 hello.html

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website!</h1>
+        <h2>Weekend Agenda</h2>
         Hello, world! I can't believe this.
     </body>
 </html>
