style hello.html

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="color:blue;" >Welcome to my website!</h1>
-        <h2>Weekend Agenda</h2>
+        <h2 style="color:red;">Weekend Agenda</h2>
         Hello, world! I can't believe this.
     </body>
 </html>
