--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1 style="color: blue;">Welcome to my website!!</h1>
-        <h2 style="color: green;">Weekend Agenda!!</h2>
+        <h1 style="color: blue;">Welcome to my website!!!</h1>
+        <h2 style="color: green;">Weekend Agenda!!!</h2>
         Hello, world! I can't believe this.
     </body>
 </html>
